# Madeline

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Madeline.sln  Madeline.vcxproj  Madeline.vcxproj.filters  MadelineCAD.sln  Makefile  README.md  TestFile.txt  build.bat  packages.config
Doxygen/html/: index.html
Doxygen/latex/: refman.tex
Shaders/: compile.bat
Shaders/Fragment/: shader.frag
Shaders/Vertex/: shader.vert
docs/: graph_legend.html
include/Madeline/Logger/: Logging.hpp
include/Madeline/WindowManager/: Devices.hpp  Swapchain.hpp  Window.hpp  WindowManager.hpp  WindowStructs.hpp
include/Madeline/WindowManager/WinElements/: Button.h
include/Skeleton/: Skeleton.hpp
src/Madeline/Logger/: Logging.cpp
src/Madeline/WindowManager/: Devices.cpp  Swapchain.cpp  Window.cpp  WindowManager.cpp
src/Madeline/WindowManager/WinElements/: Button.cpp
src/Skeleton/: main.cpp
src/WindowManager/: WindowManager.cpp  WindowManager.hpp
